--- a/views/menu_view.xml
+++ b/views/menu_view.xml
@@ -26,7 +26,13 @@
         <field name="view_mode">tree,form</field>
     </record>
 
-
+    <record id="proyecto_cobro_mensual_action" model="ir.actions.act_window">
+        <field name="name">Cobros mensuales</field>
+        <field name="res_model">asovec.proyecto_cobro_mensual</field>
+        <field name="view_mode">tree,form</field>
+        <field name="search_view_id" ref="view_asovec_proyecto_cobro_mensual_search"/>
+        <field name="context">{}</field>
+    </record> 
 
     <menuitem name="Asociacion de Vecinos" id="asovec_menu"/>
     <menuitem name="Asociacion"  id="asociacion_menu" parent="asovec_menu" sequence="10"/>
@@ -40,6 +46,9 @@
     <menuitem name="Mantenimientos" id="mantenimientos_menu" parent="asovec_menu" sequence="30"/>
     <menuitem name="Residentes" id="clientes_opcion" parent="mantenimientos_menu" action="account.res_partner_action_customer"/>
     <menuitem name="Servicios" id="productos_opcion" parent="mantenimientos_menu" action="account.product_product_action_sellable"/>
+
+    <menuitem name="Procesos" id="procesos_menu" parent="asovec_menu" sequence="40"/>
+    <menuitem name="Generacion de Cobros Mensuales" id="proyecto_cobro_mensual" parent="procesos_menu" action="proyecto_cobro_mensual_action"/> 
 
 
     <menuitem name="Procesos" id="proceso_menu" parent="asovec_menu" />
