--- a/views/residencia_view.xml
+++ b/views/residencia_view.xml
@@ -33,6 +33,7 @@
                         <field name="cliente_id" />
                         <field name="proyecto_aso_id" />
                         <field name="detalle" widget="text" placeholder="Escribe aquí..." />
+                        <field name="activo"/>
                     </group>
                     <notebook>
                         <page string="Servicios relacionados" name="servicios_relacionados">
@@ -64,6 +65,7 @@
                 <field name="detalle" />
                 <field name="cliente_id" />
                 <field name="proyecto_aso_id" />
+                <field name="activo"/>
             </tree>
         </field>
     </record>
@@ -81,6 +83,12 @@
                 <field name="direccion" />
                 <field name="cliente_id" />
                 <field name="proyecto_aso_id" />
+                <separator />
+                <filter string="Activos" name="son_activos"
+                    domain="[('activo','!=',False)]" />
+                <filter string="Inactivos" name="no_son_activos"
+                    domain="[('activo','=',False)]" />
+
 
                 <separator />
 
@@ -98,6 +106,8 @@
                         context="{'group_by':'proyecto_aso_id'}" />
                     <filter string="Contacto" name="group_contacto"
                         context="{'group_by':'cliente_id'}" />
+                    <filter string="Activo" name="group_activo"
+                        context="{'group_by':'activo'}" />                
                 </group>
             </search>
         </field>
