--- a/views/contador_view.xml
+++ b/views/contador_view.xml
@@ -60,11 +60,8 @@
 
                     <notebook>
                         <page string="Lecturas">
-                            <field name="line_ids"
-                                   context="{'default_contador_id': active_id}"
-                                   create="0" edit="0" delete="0"
-                                   mode="tree,form">
-                                <tree default_order="periodo_date desc,id desc">
+                            <field name="line_ids">
+                                <tree default_order="periodo_date desc,id desc" create="0" edit="0" delete="0">
                                     <field name="es_inicial" optional="hide"/>
 
                                     <field name="mes" invisible="es_inicial"/>
@@ -77,6 +74,7 @@
                                     <field name="cliente_id" readonly="1" optional="hide"/>
                                     <field name="proyecto_aso_id" readonly="1" optional="hide"/>
 
+                                    <field name="currency_id" invisible="1"/>
                                     <field name="base" readonly="1"/>
                                     <field name="metros_extras" readonly="1"/>
                                     <field name="pago_extra" readonly="1"/>
@@ -87,10 +85,10 @@
                                     <sheet>
                                         <group>
                                             <group>
-                                                <field name="es_inicial"/>
-                                                <field name="mes" invisible="es_inicial"/>
-                                                <field name="anio" invisible="es_inicial"/>
-                                                <field name="lectura" autofocus="1"/>
+                                                <field name="es_inicial" readonly="1"/>
+                                                <field name="mes" invisible="es_inicial" readonly="1"/>
+                                                <field name="anio" invisible="es_inicial" readonly="1"/>
+                                                <field name="lectura" autofocus="1" readonly="1"/>
                                             </group>
                                             <group>
                                                 <field name="lectura_anterior" readonly="1"/>
@@ -186,7 +184,7 @@
                 <field name="lectura"/>
                 <field name="lectura_anterior"/>
                 <field name="consumo"/>
-
+                <field name="currency_id" invisible="1"/>    
                 <field name="base"/>
                 <field name="metros_extras"/>
                 <field name="pago_extra"/>
@@ -228,6 +226,7 @@
                             <field name="metros_extras" readonly="1"/>
                         </group>
                         <group>
+                            <field name="currency_id" invisible="1"/>
                             <field name="pago_extra" readonly="1"/>
                             <field name="pago_total" readonly="1"/>
                         </group>
