--- a/views/menu_view.xml
+++ b/views/menu_view.xml
@@ -33,6 +33,13 @@
         <field name="search_view_id" ref="view_asovec_proyecto_cobro_mensual_search"/>
         <field name="context">{}</field>
     </record> 
+  
+    <record id="cobro_mensual_consulta_wizard_action" model="ir.actions.act_window">
+      <field name="name">Consulta Cobros Mensuales</field>
+      <field name="res_model">asovec.cobro_mensual_consulta_wizard</field>
+      <field name="view_mode">form</field>
+      <field name="target">new</field>
+    </record>
 
     <menuitem name="Asociacion de Vecinos" id="asovec_menu"/>
     <menuitem name="Asociacion"  id="asociacion_menu" parent="asovec_menu" sequence="10"/>
@@ -49,6 +56,9 @@
 
     <menuitem name="Procesos" id="procesos_menu" parent="asovec_menu" sequence="40"/>
     <menuitem name="Generacion de Cobros Mensuales" id="proyecto_cobro_mensual" parent="procesos_menu" action="proyecto_cobro_mensual_action"/> 
+
+    <menuitem name="Consultas" id="consultas_menu" parent="asovec_menu" sequence="40"/>
+    <menuitem name="Estado de Cuenta" id="estado_de_cuenta" parent="consultas_menu" action="cobro_mensual_consulta_wizard_action"/> 
 
 
     <menuitem name="Procesos" id="proceso_menu" parent="asovec_menu" />
